--- a/oauth/src/main/resources/application.yml
+++ b/oauth/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/travelbingo
-    username: travelbingoadmin
+    username: traveladmin
     password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
