--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>client</name>
-	<description>authorization server</description>
+	<description>client</description>
 	<properties>
 		<java.version>18</java.version>
 	</properties>
